--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,20 @@ html{
     padding: 0;
 }
 
+a{
+    text-decoration: none;
+}
+
 .debug{
     border: 1px;
+    background-color: aqua;
+    border-style: dashed;
     padding: 50px 24px;
+}
+
+.navbar{
+    min-height: 73px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
