--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ img{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: #FF6900;
+    color: white;
 }
 
 .container-prd{
@@ -41,13 +43,13 @@ img{
     flex-wrap: wrap;
     max-width: 736px;
     min-height: 770px;
+    padding: 20px;
 }
 
 .col-1_3{
     width: calc(100% / 3);
     font-size: 10px;
+    padding: 6px;
+    margin-bottom: 12px;
 }
 
-.img-col{
-    height: 345px;
-}
