--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,23 @@ img{
     left: 0;
 }
 
+.info-patch-eco{
+    position: absolute;
+    background-color: green;
+    color: white;
+    padding: 3px 6px;
+    font-size: 8px;
+    bottom: 23px;
+    left: 34px;
+}
+
+.info-patch-eco.col6{
+    left: 0;
+}
+
+.prd-bold{
+    font-weight: 900;
+}
 /* FOOTER */
 .social-ft{
     min-height: 58px;
